# uefivardump

./: Cargo.toml  README.txt
src/: main.rs  types.rs
